# django-jet

./: .gitignore  .travis.yml  Makefile  README.rst  gulpfile.js  package.json  pyproject.toml  setup.py
docs/: config_file.rst
jet/: filters.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
jet/dashboard/: dashboard.py  forms.py  models.py  modules.py  settings.py  urls.py  utils.py  views.py
jet/dashboard/dashboard_modules/: google_analytics.py  google_analytics_views.py
jet/dashboard/templates/admin/: index.html
jet/dashboard/templatetags/: jet_dashboard_tags.py
jet/static/jet/css/: vendor.css
jet/static/jet/css/themes/default/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/green/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-blue/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-gray/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-green/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-violet/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/js/src/: main.js
jet/templates/admin/: base.html  popup_response.html
jet/templates/admin/includes/: fieldset.html
jet/templatetags/: jet_tags.py
jet/tests/: admin.py  settings.py  test_dashboard.py  test_filters.py  test_tags.py  test_utils.py  test_views.py  urls.py
(+1 files in other folders)
