[tool.poetry]
name = "django-jet"
version = "1.2.0"
description = "Modern template for Django admin interface with improved functionality"
authors = ["Djordje Atlialp <djordje@atlialp.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
django-admin-rangefilter = "^0.6.1"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
coveralls = "^2.0.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
